Started an appendix describing the removal of coordinate system singularities. This will be useful to have fully written. I also suspect that it might come up in the defense

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -218,7 +218,9 @@ no results from scaling tests. Yokota, Barba and Knepley \cite{Yokota2010} apply
 Within this dissertation, we have developed the first implementation of RBF-FD
 to span multiple CPUs. Each CPU has a corresponding GPU attached to it
 in a one-to-one correspondence. We thus also introduced the first known 
-implementation of accelerated RBF-FD on the GPU. \hl{continue with outline of chapters} 
+implementation of accelerated RBF-FD on the GPU.
+
+ \hl{continue with outline of chapters} 
 We present our explicit and implicit solutions to PDEs with our multi-GPU RBF-FD implementation. 
 %Within the scope of this paper we detail our method for spanning RBF-FD across multiple CPU/GPU processors and emphasize numerical validation of the implementation rather than optimization strategies. We will consider optimization in future work. The calculations are performed on Keeneland, a high performance computing installation supported by the National Science Foundation and located at Oak Ridge National Lab. Keeneland currently has 240 CPUs accompanied by 360 NVidia Fermi class GPUs with at least double that number expected by the end of 2012 \cite{Vetter2011}.
 
