--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,11 +1,13 @@
 %!TEX root = karen.tex
 
 
-\chapter{The RBF-generate Finite Differences Method}
+\chapter{The RBF-generated Finite Differences Method}
 
 \section{RBF-FD as an interpolation problem}
 
-%!TEX root =  paper_draft.tex
+If we start by describing global RBF methods and how they approximate the derivative by forming an expansion of the function in terms of weighted basis function, then take the derivatives of the basis functions to approximate the 
+
+
 \section{Calculating RBF-FD weights}
 \label{sec:rbffd}
 
@@ -58,6 +60,81 @@ corresponding to all required derivative quantities (i.e., $\pd{}{x}$, $\pd{}{y}
 
 For each of the $N$ small system solves of Equation~(\ref{eq:rbffd_weight_system}), the $n$ nearest neighbors to $\vx_j$ need to be located. This can be done efficiently using neighbor query algorithms or spatial partitioning data-structures such as Locality Sensitive Hashing (LSH) and $k$D-Tree. Different query algorithms often have a profound impact on the DM structure and memory access patterns. We choose a Raster ($ijk$) ordering LSH algorithm \cite{Bollig2011} leading to the matrix structure in Figures~\ref{fig:oneThreadPerStencil} and \ref{fig:oneWarpPerStencil}. While querying neighbors for each stencil is an embarrassingly parallel operation, the node sets used here are stationary and require stencil generation only once. Efficiency and parallelism for this task has little impact on the overall run-time of tests, which is dominated by the time-stepping. We preprocess node sets and generate stencils serially, then load stencils and nodes from disk at run-time. In contrast to the RBF-FD view of a static grid, Lagrangian/particle based PDE algorithms promote efficient parallel variants of LSH in order to accelerate querying neighbors at each time-step \cite{Pan2011, Goswami2010}. 
 
+
+\section{Weight Operators}
+Throughout the development of our parallel code we have verified code correctness through the solution of a variety of PDEs. Here we provide a list of operators we have tested and their corresponding equations for the RHS of Equation~\ref{eq:rbffd_weight_system} necessary to compute RBF-FD weights. 
+
+The standard first derivatives $\pd{}{x}, \pd{}{y}, \pd{}{z}$:
+\begin{itemize}
+	\item $\pd{\phi}{x}  $
+\end{itemize} 
+
+where $\pd{\phi}{r}$ for the Gaussian RBFs is given by: 
+
+
+\subsection{Laplacian ($\Laplacian$)}
+
+2D: 
+
+3D: 
+
+\subsection{Laplace-Beltrami ($\LaplaceBeltrami$) on the Sphere}
+
+The $\Laplacian$ operator can be represented in spherical polar coordinates for $\mathbb{R}^3$ as: 
+\begin{align} 
+\Laplacian = \underbrace{\frac{1}{r} \pd{}{r} \left( r^{2} \pd{}{r}  \right)}_{\mathsf{radial}} + \underbrace{\frac{1}{r^2} \Delta_{S}}_{\mathsf{angular}} , \label{eq:laplacian_in_spherical}
+\end{align}
+where $\LaplaceBeltrami$ is the Laplace-Beltrami operator---i.e., the Laplacian operator constrained to the surface of the sphere. This form nicely illustrates the separation of components into radial and angular terms. 
+
+In the case of PDEs solved on the unit sphere, there is no radial term, so we have:
+\begin{align}
+\Laplacian  \equiv \LaplaceBeltrami.
+\end{align}
+Although this originated in the spherical coordinate system, \cite{WrightFlyerYuen10} introduced the following Laplaci-Beltrami operator for the surface of the sphere: 
+\begin{align} 
+\LaplaceBeltrami = \frac{1}{4} \left[ \left(4-r^2\right) \pdd{}{r} + \frac{4-3r^2}{r} \pd{}{r} \right],
+\end{align} 
+where $r$ is the Euclidean distance between nodes of an RBF-FD stencil and is independent of our choice of coordinate system. 
+
+\subsection{Constrained Gradient ($P_{x} \cdot \grad$) on the Sphere}
+
+Additionally following \cite{FlyerWright09, FlyerLehto11}, the gradient operator must also be constrained to the sphere with this projection matrix: 
+%\frac{1}{||\mathbf{x}||}
+\begin{align}
+P = I - \mathbf{x} \mathbf{x}^T =  \begin{pmatrix} 
+(1-x_1^2) & -x_1 x_2 & -x_1 x_3 \\
+-x_1 x_2 & (1-x_2^2) & -x_2 x_3 \\ 
+-x_1 x_3 & -x_2 x_3 & (1-x_3^2) 
+\end{pmatrix} = \begin{pmatrix} P_{x_1} \\ P_{x_2} \\ P_{x_3} \end{pmatrix}
+\label{eq:project_gradient}
+\end{align}
+where $\mathbf{x}$ is the unit normal at the stencil center. 
+
+
+The direct method of computing RBF-FD weights for the projected gradient for $\mathbf{P} \cdot \nabla $ is presented in \cite{FlyerWright09}. When solving for the weights, we apply the projection on the right hand side of our small linear system. We let $\vx = \begin{pmatrix} x_1, x_2, x_3 \end{pmatrix} $ be the stencil center, and $\vx_k=\begin{pmatrix} x_{1,k}, x_{2,k}, x_{3,k}\end{pmatrix}$ indicate an RBF-FD stencil node. 
+
+Using the chain rule, and assumption that 
+$$r(\vx_k-\vx)=\vectornorm{\vx_k-\vx} = \sqrt{(x_{1,k}-x_1)^2 + (x_{2,k}-x_2)^2 + (x_{3,k}-x_3)^2},$$
+ we obtain the unprojected gradient of $\phi$ as
+$$\nabla \phi(r(\vx_k - \vx)) = \pd{r}{\vx} \pd{\phi(r(\vx_k - \vx))}{r} = - (\vx_k - \vx)\frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r}$$. 
+
+Applying the projection matrix gives 
+\begin{align*}
+\mathbf{P} \nabla \phi(r(\vx_k - \vx)) & = - (\mathbf{P} \cdot \vx_k - \mathbf{P}\cdot\vx)\frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} \\
+& =  - (\mathbf{P}\cdot\vx_k - 0)\frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} \\
+& = - (I-\vx\vx^T)(\vx_k
+)\frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} \\
+& = \begin{pmatrix} x \vx^T \vx_k - x_k \\ y \vx^T \vx_k -  y_k \\ z \vx^T \vx_k -z_k \end{pmatrix} \frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} 
+ \end{align*}
+Thus, when computing RBF-FD weights for the projected gradient we directly compute the weights using these RHS for the small stencil weight linear systems: 
+\begin{align} 
+P\pd{}{x_1} = ( x_1 \vx^T \vx_k - x_{1,k}) \frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} |_{\vx=\vx_j} \\
+P\pd{}{x_2} = ( x_2 \vx^T \vx_k - x_{2,k}) \frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} |_{\vx=\vx_j} \\
+P\pd{}{x_3} = ( x_3 \vx^T \vx_k - x_{3,k}) \frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} |_{\vx=\vx_j}
+\end{align}
+
+
+
 \section{Stabilization: Hyperviscosity}
 
 For RBF-FD, differentiation matrices encode convective operators of the form 
@@ -78,7 +155,7 @@ to Equation~(\ref{eqconv}) \cite{FornbergLehto11}. By using Gaussian
 \label{eqn:gaussian_hv}
 \end{equation}
 where $k$ is the order of the Laplacian and  $p_k(r)$ are multiples of generalized Laguerre polynomials that
-are generated recursively (see Section 3.2 \cite{FornbergLehto11}). We assume a 2D  Laplacian operator 
+are generated recursively (see \cite{FornbergLehto11}: Section 3.2). We assume a 2D  Laplacian operator 
 when working on the surface of the sphere since a local stencil can be viewed as lying on a plane.
 %Since the purpose of hyperviscosity is to suppress the highly oscillatory modes while leaving all the smooth ones intact, it suffices to ignore the local curvature of the sphere, and calculate $\Delta^{k}\phi(r)$ as if the RBF-FD stencil was located on a 2D flat plane.
 %A 2D approximation for the hyperviscosity suffices because its only role is to suppress spurious unphysical modes. The scale of hyperviscosity, on the order of $10^{-30}$, makes this a completely harmless assumption even in the case when the stencil radius is large relative to the size of the sphere.
@@ -100,76 +177,6 @@ H = \gamma \Delta^{k} = \gamma_c N^{-k} \Delta^{k}.
 \end{equation*}
 Given a choice of $\epsilon$ (see Section~\ref{sec:numerical_validation}), it was found experimentally that $\gamma = \gamma_c N^{-k}$  provides stability and good accuracy for all values of $N$ considered here. It also ensures that the viscosity vanishes as $N\rightarrow\infty$ \cite{FlyerLehto11}.
 In general, the larger the stencil size, the higher the order of the Laplacian.  This is attributed to the fact that, for convective operators, larger stencils treat a wider range of modes accurately. As a result, the hyperviscosity operator should preserve as much of that range as possible. The parameter $\gamma_c$ must also be chosen with care and its sign depends on $k$ (for $k$ even, $\gamma_c$ will be negative and for $k$ odd, it will be positive). If $\gamma_c$ is too large, the eigenvalues move outside the stability domain of our time-stepping scheme and/or eigenvalues corresponding to lower physical modes are not left intact, reducing the accuracy of our approximation. If $\gamma_c$ is too small, eigenvalues remain in the right half-plane \cite{FornbergLehto11,FlyerLehto11}.
-
-
-\section{Weight Operators}
-Throughout the development of our parallel code we have verified code correctness through the solution of a variety of PDEs. Here we provide a list of operators we have tested and their corresponding equations for the RHS of Equation~\ref{eq:rbffd_weight_system} necessary to compute RBF-FD weights. 
-
-The standard first derivatives $\pd{}{x}, \pd{}{y}, \pd{}{z}$:
-\begin{itemize}
-	\item $\pd{\phi}{x}  $
-\end{itemize} 
-
-Since many of our test cases are PDEs solved on the unit sphere, a projection operator is necessary to compute derivatives constrained to the surface of the sphere. The projection operator provided by \cite{FlyerWright07}  is given by: 
-
-\subsection{Laplacian ($\Laplacian$)}
-
-\subsection{Sphere Surface Laplacian ($\LaplaceBeltrami$)}
-
-Most models treat the Earth as if it is a sphere. Our tests are scaled to the unit sphere. 
-
-For PDEs solved on the surface of the sphere, the $\Laplacian$ operator (Euclidean Laplacian) can represented in spherical polar coordinates for $\mathbb{R}^3$: 
-\begin{align} 
-\Laplacian = \underbrace{\frac{1}{r} \pd{}{r} \left( r^{2} \pd{}{r}  \right)}_{\mathsf{radial}} + \underbrace{\frac{1}{r^2} \Delta_{S}}_{\mathsf{angular}} , \label{eq:laplacian_in_spherical}
-\end{align}
-where $\LaplaceBeltrami$ is the Laplace-Beltrami operator---i.e., the Laplacian constrained to the surface of the sphere. This form nicely illustrates the components of the $\Laplacian$ corresponding to the radial and angular terms. 
-
-Noting that our geometry is the periphery of the unit sphere, and there is no radial term, we have:
-\begin{align}
-\Laplacian    \equiv \LaplaceBeltrami , 
-\end{align}
-and although this originated in the spherical coordinate system, we can use the following RBF operator from \cite{WrightFlyerYuen10}---Equation (20): 
-\begin{align} 
-\LaplaceBeltrami = \frac{1}{4} \left[ \left(4-r^2\right) \pdd{}{r} + \frac{4-3r^2}{r} \pd{}{r} \right],
-\end{align} 
-where $r$ is the Euclidean distance between nodes of an RBF-FD stencil and is independent of our choice of coordinate system. 
-
-
-Additionally following \cite{FlyerWright09, FlyerLehto11}, the off-diagonal blocks in Equation~\ref{eq:stokes_linear_system} corresponding to the components of a gradient operator must also be constrained to the sphere with this projection matrix: 
-%\frac{1}{||\mathbf{x}||}
-\begin{align}
-P = I - \mathbf{x} \mathbf{x}^T =  \begin{pmatrix} 
-(1-x_1^2) & -x_1 x_2 & -x_1 x_3 \\
--x_1 x_2 & (1-x_2^2) & -x_2 x_3 \\ 
--x_1 x_3 & -x_2 x_3 & (1-x_3^2) 
-\end{pmatrix} = \begin{pmatrix} P_{x_1} \\ P_{x_2} \\ P_{x_3} \end{pmatrix}
-\label{eq:project_gradient}
-\end{align}
-where $\mathbf{x}$ is the unit normal at the stencil center. 
-
-
-The direct method of computing RBF-FD weights for the projected gradient for $\mathbf{P} \cdot \nabla $ is presented in \cite{FlyerWright09}. When solving for the weights, we apply the projection on the right hand side of our small linear system. We let $\vx = \begin{pmatrix} x_1, x_2, x_3 \end{pmatrix} $ be the stencil center, and $\vx_k=\begin{pmatrix} x_{1,k}, x_{2,k}, x_{3,k}\end{pmatrix}$ indicate an RBF-FD stencil node. 
-
-Using the chain rule, and assumption that $r(\vx_k-\vx)=\vectornorm{\vx_k-\vx} = \sqrt{(x_{1,k}-x_1)^2 + (x_{2,k}-x_2)^2 + (x_{3,k}-x_3)^2}$, we obtain the unprojected gradient of $\phi$ as
-$$\nabla \phi(r(\vx_k - \vx)) = \pd{r}{\vx} \pd{\phi(r(\vx_k - \vx))}{r} = - (\vx_k - \vx)\frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r}$$. 
-
-Applying the projection matrix gives 
-\begin{align}
-\mathbf{P} \nabla \phi(r(\vx_k - \vx)) & = - (\mathbf{P} \cdot \vx_k - \mathbf{P}\cdot\vx)\frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} =  - (\mathbf{P}\cdot\vx_k - 0)\frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} \\
-& = - (I-\vx\vx^T)(\vx_k
-)\frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} \\
-& = \begin{pmatrix} x \vx^T \vx_k - x_k \\ y \vx^T \vx_k -  y_k \\ z \vx^T \vx_k -z_k \end{pmatrix} \frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} 
- \end{align}
-Thus, when computing RBF-FD weights for the projected gradient we directly compute the weights using these RHS for the small stencil weight linear systems: 
-\begin{align} 
-P\pd{}{x_1} = ( x_1 \vx^T \vx_k - x_{1,k}) \frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} |_{\vx=\vx_j} \\
-P\pd{}{x_2} = ( x_2 \vx^T \vx_k - x_{2,k}) \frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} |_{\vx=\vx_j} \\
-P\pd{}{x_3} = ( x_3 \vx^T \vx_k - x_{3,k}) \frac{1}{r(\vx_k - \vx)} \pd{\phi(r(\vx_k - \vx))}{r} |_{\vx=\vx_j}
-\end{align}
-
-
-
-
 
 \section{Fragments (integrate above)}
 
