--- a/karen.tex
+++ b/karen.tex
@@ -139,7 +139,8 @@ need Survey of goals stated in prospectus and whether they were completed or not
 %%\input{hyperbolic_equations.tex}
 %%\input{parallel_gmres.tex} 
 
-%\appendix
+\appendix
+\input{appendix1.tex}
 %\chapter{TODO}
 %\input todolist
 
