--- a/chapter2.tex
+++ b/chapter2.tex
@@ -25,6 +25,7 @@ Similar to standard Finite Differences, a stencil is generated connecting the ce
 		\caption{A 13 node RBF-FD stencil of randomly distributed nodes. The stencil centered at the green square contains the 12 nearest neighbors contained within the minimum covering circle drawn in purple.}
 		\label{fig:stencil_example_random}
 	\end{subfigure}
+	\caption{Examples of stencils computable with RBF-FD}
 	\label{fig:stencil_example}
 \end{figure}
 
