--- a/karen.tex
+++ b/karen.tex
@@ -25,6 +25,7 @@
     urlcolor=red, 
 ]{hyperref}
 
+\usepackage{dsfont}
 
 \title{Multi-GPU Solutions of Geophysical PDEs with Radial Basis Function-generated Finite Differences}
 \author{Evan F. Bollig}
