Working on a section. Calling it an appendix because its not clear how useful it is but these are interesting quantitative results

--- a/karen.tex
+++ b/karen.tex
@@ -142,6 +142,7 @@ need Survey of goals stated in prospectus and whether they were completed or not
 
 \appendix
 \input{appendix1.tex}
+\input{appendix2.tex}
 %\chapter{TODO}
 %\input todolist
 
